--- a/static/e-ui/lib/style/src/theme/frame-layout.scss
+++ b/static/e-ui/lib/style/src/theme/frame-layout.scss
@@ -11,7 +11,7 @@
     height:$frame-layout--logo-height;
     cursor: pointer;
     box-sizing: border-box;
-    display:flex;
+    // display:flex;
     img{
       max-width:100%;
       max-height:100%;
