为啥有高度200在mixins/index.js中

--- a/src/components/quill-editor/index.scss
+++ b/src/components/quill-editor/index.scss
@@ -2,7 +2,7 @@
   border-color: $border-color-base;
 }
 .ql-editor{
-  min-height:200px;
+  // min-height:200px;
   line-height:1.75;
   height:70vh;
   overflow:auto;
