--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -134,7 +134,7 @@ div#nprogress{
     transition:opacity 0.3s ease 0s;
   }
 }
-.scroller,.el-table__body-wrapper{
+.ms-scroller,.scroller,.el-table__body-wrapper{
   overflow:auto;
   @include scroller(#ddd,6px);
 }
